JEKT-2394 - 🔁 Modified - Added Release 3 JDE Pipelines to Source System Jobs     - Job        - SJD_PIPELINE_JOB        - TAI_PIPELINE_JOB        - GMD_PIPELINE_JOB        - JET_PIPELINE_JOB        - JES_PIPELINE_JOB        - MTR_PIPELINE_JOB        - DEU_PIPELINE_JOB        - JSW_PIPELINE_JOB        - DJD_PIPELINE_JOB        - JEM_PIPELINE_JOB

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -9373,21 +9373,35 @@ jobs:
       onSuccess: false
       onFailure: false
     pipelines:
+    - pipelines/SAP_01_MD_PLNT
+    - pipelines/MD_MATL_SAP_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI
+    - pipelines/MD_SAP_MATL_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_MRS
     - pipelines/SAP_01_MD_BILL_DOC_HDR_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
+    - pipelines/MD_DELV_4
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
+    - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_1
+    - pipelines/SAP_RSEG
     - pipelines/SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN_02
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_TAI
+    - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/SAP_MD_MATL_INV_TAI
     - pipelines/SAP_MD_DELV_LINE_BWI_TAI
+    - pipelines/MD_SUP_3
+    - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
+    - pipelines/SAP_01_MD_CUST_HCS
+    - pipelines/SAP_01_MD_SLS_ORDR_TAI
+    - pipelines/SAP_MD_MATL_BOM
+    - pipelines/SAP_MD_MATL_MVMT_HDR
+    - pipelines/SAP_MD_CRNCY_BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:16:30'
-    modifiedAt: '2023-05-30 20:26:24'
+    modifiedAt: '2023-05-30 20:33:20'
     author: smille29@its.jnj.com
   jobs/DEV_VST_PIPELINE_JOB:
     name: VST_PIPELINE_JOB
@@ -9523,18 +9537,33 @@ jobs:
     pipelines:
     - pipelines/JES_01_MD_SHIP_JET_JSW_DEU_JEM_SJD_DJD
     - pipelines/JDE_MD_DELV_LINE_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
+    - pipelines/JDE_MD_BOM_HDR_BW2
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST_JDE
+    - pipelines/JDE_MD_MATL_MVMT_HDR_DEU_DJD_MTR_JEM_JES_JET__JSW
+    - pipelines/JDE_01_MD_SLS_ORDR_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
     - pipelines/JDE_MD_MATL_LOC_DEU
+    - pipelines/MD_DELV_9
+    - pipelines/JDE_01_MD_MATL_BOM
     - pipelines/JDE_01_MD_PO_SCHED_LINE_DELV
     - pipelines/JDE_MD_SLS_ORDR_LINE_
+    - pipelines/JDE_01_MD_CUST
+    - pipelines/MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
+    - pipelines/MD_PRCH_DELV_CNFRMS_3
+    - pipelines/JDE_01_MD_PLNT_DEU_DJD_SJD_JEM_JSW_JET_JES_BW2_GMD
+    - pipelines/JDE_MD_CRNCY_BW2_DEU_DJD_GMD_JET_JEM_JES_JSW_SJD
+    - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_9
+    - pipelines/JDE_MD_MATL
     - pipelines/JDE_01_MD_MATL_INV
+    - pipelines/MD_SUP_12
+    - pipelines/jde_md_doc_itm_incm_invc
+    - pipelines/JDE_MD_MATL_UOM_JET_JES_JEM_JSW_BW2_DJD_SJD_DEU_GMD_MTR
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:22:23'
-    modifiedAt: '2023-05-08 18:30:15'
+    modifiedAt: '2023-05-30 20:41:14'
     author: smille29@its.jnj.com
   jobs/DEV_DJD_PIPELINE_JOB:
     name: DJD_PIPELINE_JOB
@@ -9554,16 +9583,28 @@ jobs:
     pipelines:
     - pipelines/JES_01_MD_SHIP_JET_JSW_DEU_JEM_SJD_DJD
     - pipelines/JDE_MD_DELV_LINE_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
+    - pipelines/JDE_MD_MATL_MVMT_HDR_DEU_DJD_MTR_JEM_JES_JET__JSW
+    - pipelines/JDE_01_MD_SLS_ORDR_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
+    - pipelines/MD_DELV_9
     - pipelines/JDE_MD_SLS_ORDR_LINE_
+    - pipelines/JDE_01_MD_CUST
+    - pipelines/MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
+    - pipelines/MD_PRCH_DELV_CNFRMS_3
+    - pipelines/JDE_01_MD_PLNT_DEU_DJD_SJD_JEM_JSW_JET_JES_BW2_GMD
+    - pipelines/JDE_MD_CRNCY_BW2_DEU_DJD_GMD_JET_JEM_JES_JSW_SJD
+    - pipelines/MD_SUP_15
     - pipelines/JDE_MD_MATL_LOC_DJD
+    - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_9
+    - pipelines/JDE_MD_MATL
     - pipelines/JDE_01_MD_MATL_INV
+    - pipelines/JDE_MD_MATL_UOM_JET_JES_JEM_JSW_BW2_DJD_SJD_DEU_GMD_MTR
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:22:54'
-    modifiedAt: '2023-05-08 18:27:56'
+    modifiedAt: '2023-05-30 21:08:19'
     author: smille29@its.jnj.com
   jobs/DEV_GMD_PIPELINE_JOB:
     name: GMD_PIPELINE_JOB
@@ -9582,19 +9623,34 @@ jobs:
       onFailure: false
     pipelines:
     - pipelines/JDE_MD_DELV_LINE_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
+    - pipelines/JDE_MD_MATL_MVMT_HDR_GMD
+    - pipelines/JDE_MD_BOM_HDR_BW2
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST_JDE
+    - pipelines/JDE_01_MD_SLS_ORDR_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
     - pipelines/JDE_MD_MATL_LOC_GMD
+    - pipelines/MD_DELV_9
+    - pipelines/JDE_01_MD_MATL_BOM
     - pipelines/JDE_01_MD_PO_SCHED_LINE_DELV
+    - pipelines/MD_SUP_10
     - pipelines/JDE_01_MD_SHIP_MTK
     - pipelines/JDE_MD_SLS_ORDR_LINE_
+    - pipelines/JDE_01_MD_CUST
+    - pipelines/MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
+    - pipelines/MD_PRCH_DELV_CNFRMS_3
+    - pipelines/JDE_01_MD_PLNT_DEU_DJD_SJD_JEM_JSW_JET_JES_BW2_GMD
+    - pipelines/JDE_MD_CRNCY_BW2_DEU_DJD_GMD_JET_JEM_JES_JSW_SJD
+    - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_9
+    - pipelines/JDE_MD_MATL
     - pipelines/JDE_01_MD_MATL_INV
+    - pipelines/jde_md_doc_itm_incm_invc
+    - pipelines/JDE_MD_MATL_UOM_JET_JES_JEM_JSW_BW2_DJD_SJD_DEU_GMD_MTR
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:23:35'
-    modifiedAt: '2023-05-08 18:27:27'
+    modifiedAt: '2023-05-30 21:12:02'
     author: smille29@its.jnj.com
   jobs/DEV_JEM_PIPELINE_JOB:
     name: JEM_PIPELINE_JOB
@@ -9614,18 +9670,33 @@ jobs:
     pipelines:
     - pipelines/JES_01_MD_SHIP_JET_JSW_DEU_JEM_SJD_DJD
     - pipelines/JDE_MD_DELV_LINE_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
+    - pipelines/JDE_MD_BOM_HDR_BW2
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST_JDE
+    - pipelines/JDE_MD_MATL_MVMT_HDR_DEU_DJD_MTR_JEM_JES_JET__JSW
+    - pipelines/JDE_01_MD_SLS_ORDR_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
+    - pipelines/MD_DELV_9
+    - pipelines/JDE_01_MD_MATL_BOM
     - pipelines/JDE_01_MD_PO_SCHED_LINE_DELV
     - pipelines/JDE_MD_MATL_LOC_JEM
     - pipelines/JDE_MD_SLS_ORDR_LINE_
+    - pipelines/JDE_01_MD_CUST
+    - pipelines/MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
+    - pipelines/MD_PRCH_DELV_CNFRMS_3
+    - pipelines/JDE_01_MD_PLNT_DEU_DJD_SJD_JEM_JSW_JET_JES_BW2_GMD
+    - pipelines/JDE_MD_CRNCY_BW2_DEU_DJD_GMD_JET_JEM_JES_JSW_SJD
+    - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_9
+    - pipelines/JDE_MD_MATL
     - pipelines/JDE_01_MD_MATL_INV
+    - pipelines/MD_SUP_12
+    - pipelines/jde_md_doc_itm_incm_invc
+    - pipelines/JDE_MD_MATL_UOM_JET_JES_JEM_JSW_BW2_DJD_SJD_DEU_GMD_MTR
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:25:27'
-    modifiedAt: '2023-05-08 18:36:57'
+    modifiedAt: '2023-05-30 21:15:38'
     author: smille29@its.jnj.com
   jobs/DEV_JES_PIPELINE_JOB:
     name: JES_PIPELINE_JOB
@@ -9644,19 +9715,34 @@ jobs:
       onFailure: false
     pipelines:
     - pipelines/JDE_MD_DELV_LINE_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
+    - pipelines/JDE_MD_BOM_HDR_BW2
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST_JDE
+    - pipelines/JDE_MD_MATL_MVMT_HDR_DEU_DJD_MTR_JEM_JES_JET__JSW
+    - pipelines/JDE_01_MD_SLS_ORDR_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
+    - pipelines/MD_DELV_9
+    - pipelines/JDE_01_MD_MATL_BOM
     - pipelines/JDE_01_MD_PO_SCHED_LINE_DELV
     - pipelines/JDE_01_MD_SHIP_MTK
+    - pipelines/MD_SUP_13
     - pipelines/JDE_MD_SLS_ORDR_LINE_
+    - pipelines/JDE_01_MD_CUST
     - pipelines/JDE_MD_MATL_LOC_JES
+    - pipelines/MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
+    - pipelines/MD_PRCH_DELV_CNFRMS_3
+    - pipelines/JDE_01_MD_PLNT_DEU_DJD_SJD_JEM_JSW_JET_JES_BW2_GMD
+    - pipelines/JDE_MD_CRNCY_BW2_DEU_DJD_GMD_JET_JEM_JES_JSW_SJD
+    - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_9
+    - pipelines/JDE_MD_MATL
     - pipelines/JDE_01_MD_MATL_INV
+    - pipelines/jde_md_doc_itm_incm_invc
+    - pipelines/JDE_MD_MATL_UOM_JET_JES_JEM_JSW_BW2_DJD_SJD_DEU_GMD_MTR
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:26:11'
-    modifiedAt: '2023-05-08 18:37:06'
+    modifiedAt: '2023-05-30 21:19:10'
     author: smille29@its.jnj.com
   jobs/DEV_JET_PIPELINE_JOB:
     name: JET_PIPELINE_JOB
@@ -9676,18 +9762,33 @@ jobs:
     pipelines:
     - pipelines/JES_01_MD_SHIP_JET_JSW_DEU_JEM_SJD_DJD
     - pipelines/JDE_MD_DELV_LINE_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
+    - pipelines/MD_SUP_14
+    - pipelines/JDE_MD_BOM_HDR_BW2
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST_JDE
+    - pipelines/JDE_MD_MATL_MVMT_HDR_DEU_DJD_MTR_JEM_JES_JET__JSW
+    - pipelines/JDE_01_MD_SLS_ORDR_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
+    - pipelines/MD_DELV_9
+    - pipelines/JDE_01_MD_MATL_BOM
     - pipelines/JDE_01_MD_PO_SCHED_LINE_DELV
     - pipelines/JDE_MD_SLS_ORDR_LINE_
+    - pipelines/JDE_01_MD_CUST
+    - pipelines/MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
+    - pipelines/MD_PRCH_DELV_CNFRMS_3
+    - pipelines/JDE_01_MD_PLNT_DEU_DJD_SJD_JEM_JSW_JET_JES_BW2_GMD
+    - pipelines/JDE_MD_CRNCY_BW2_DEU_DJD_GMD_JET_JEM_JES_JSW_SJD
+    - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_9
     - pipelines/JDE_MD_MATL_LOC_JET
+    - pipelines/JDE_MD_MATL
     - pipelines/JDE_01_MD_MATL_INV
+    - pipelines/jde_md_doc_itm_incm_invc
+    - pipelines/JDE_MD_MATL_UOM_JET_JES_JEM_JSW_BW2_DJD_SJD_DEU_GMD_MTR
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:26:51'
-    modifiedAt: '2023-05-08 18:26:17'
+    modifiedAt: '2023-05-30 21:22:48'
     author: smille29@its.jnj.com
   jobs/DEV_JNS_PIPELINE_JOB:
     name: JNS_PIPELINE_JOB
@@ -9731,18 +9832,33 @@ jobs:
     pipelines:
     - pipelines/JES_01_MD_SHIP_JET_JSW_DEU_JEM_SJD_DJD
     - pipelines/JDE_MD_DELV_LINE_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
+    - pipelines/JDE_MD_BOM_HDR_BW2
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST_JDE
+    - pipelines/JDE_MD_MATL_MVMT_HDR_DEU_DJD_MTR_JEM_JES_JET__JSW
+    - pipelines/JDE_01_MD_SLS_ORDR_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
+    - pipelines/MD_DELV_9
+    - pipelines/JDE_01_MD_MATL_BOM
     - pipelines/JDE_01_MD_PO_SCHED_LINE_DELV
     - pipelines/JDE_MD_MATL_LOC_JSW
     - pipelines/JDE_MD_SLS_ORDR_LINE_
+    - pipelines/JDE_01_MD_CUST
+    - pipelines/MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
+    - pipelines/MD_PRCH_DELV_CNFRMS_3
+    - pipelines/JDE_01_MD_PLNT_DEU_DJD_SJD_JEM_JSW_JET_JES_BW2_GMD
+    - pipelines/JDE_MD_CRNCY_BW2_DEU_DJD_GMD_JET_JEM_JES_JSW_SJD
+    - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_9
+    - pipelines/JDE_MD_MATL
     - pipelines/JDE_01_MD_MATL_INV
+    - pipelines/MD_SUP_12
+    - pipelines/jde_md_doc_itm_incm_invc
+    - pipelines/JDE_MD_MATL_UOM_JET_JES_JEM_JSW_BW2_DJD_SJD_DEU_GMD_MTR
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:28:09'
-    modifiedAt: '2023-05-08 18:37:18'
+    modifiedAt: '2023-05-30 21:26:06'
     author: smille29@its.jnj.com
   jobs/DEV_MTR_PIPELINE_JOB:
     name: MTR_PIPELINE_JOB
@@ -9761,18 +9877,31 @@ jobs:
       onFailure: false
     pipelines:
     - pipelines/JDE_MD_DELV_LINE_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
+    - pipelines/JDE_MD_BOM_HDR_BW2
+    - pipelines/JDE_MD_MATL_MVMT_HDR_DEU_DJD_MTR_JEM_JES_JET__JSW
+    - pipelines/JDE_01_MD_SLS_ORDR_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
+    - pipelines/JDE_02_MD_PLNT_MTR
+    - pipelines/MD_DELV_9
     - pipelines/JDE_MD_MATL_LOC_MTR
+    - pipelines/JDE_01_MD_MATL_BOM
     - pipelines/JDE_01_MD_PO_SCHED_LINE_DELV
     - pipelines/JDE_01_MD_SHIP_MTK
     - pipelines/JDE_MD_SLS_ORDR_LINE_
+    - pipelines/JDE_01_MD_CUST
+    - pipelines/MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
+    - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_9
+    - pipelines/JDE_MD_MATL
     - pipelines/JDE_01_MD_MATL_INV
+    - pipelines/MD_SUP_12
+    - pipelines/MD_PRCH_DELV_CNFRMS_2
+    - pipelines/JDE_MD_MATL_UOM_JET_JES_JEM_JSW_BW2_DJD_SJD_DEU_GMD_MTR
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:28:47'
-    modifiedAt: '2023-05-08 18:37:25'
+    modifiedAt: '2023-05-30 21:31:37'
     author: smille29@its.jnj.com
   jobs/DEV_SJD_PIPELINE_JOB:
     name: SJD_PIPELINE_JOB
@@ -9792,18 +9921,32 @@ jobs:
     pipelines:
     - pipelines/JES_01_MD_SHIP_JET_JSW_DEU_JEM_SJD_DJD
     - pipelines/JDE_MD_DELV_LINE_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
+    - pipelines/JDE_MD_BOM_HDR_BW2
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST_JDE
+    - pipelines/JDE_01_MD_SLS_ORDR_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
+    - pipelines/MD_DELV_9
     - pipelines/JDE_MD_MATL_LOC_SJD
+    - pipelines/JDE_01_MD_MATL_BOM
     - pipelines/JDE_01_MD_PO_SCHED_LINE_DELV
     - pipelines/JDE_MD_SLS_ORDR_LINE_
+    - pipelines/JDE_01_MD_CUST
+    - pipelines/MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
+    - pipelines/MD_PRCH_DELV_CNFRMS_3
+    - pipelines/JDE_01_MD_PLNT_DEU_DJD_SJD_JEM_JSW_JET_JES_BW2_GMD
+    - pipelines/JDE_MD_CRNCY_BW2_DEU_DJD_GMD_JET_JEM_JES_JSW_SJD
+    - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_9
+    - pipelines/JDE_MD_MATL
     - pipelines/JDE_01_MD_MATL_INV
+    - pipelines/MD_SUP_12
+    - pipelines/jde_md_doc_itm_incm_invc
+    - pipelines/JDE_MD_MATL_UOM_JET_JES_JEM_JSW_BW2_DJD_SJD_DEU_GMD_MTR
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:29:19'
-    modifiedAt: '2023-05-08 18:39:25'
+    modifiedAt: '2023-05-30 21:35:16'
     author: smille29@its.jnj.com
   jobs/JOB_MD_BOM_HDR:
     name: JOB_MD_BOM_HDR
