--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -8760,7 +8760,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Photon_Medium
+    jobSize: Prophecy_Large_D12_2_10
     scheduleCron: 0 0 2 ? * 7 *
     timeout: null
     alerting:
@@ -8792,7 +8792,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 13:44:33'
-    modifiedAt: '2023-05-30 17:46:17'
+    modifiedAt: '2023-05-30 21:41:18'
     author: smille29@its.jnj.com
   jobs/DEV_BBA_PIPELINE_JOB:
     name: BBA_PIPELINE_JOB
@@ -8801,7 +8801,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Photon_Medium
+    jobSize: Prophecy_Large_D12_2_10
     scheduleCron: 0 0 2 ? * 7 *
     timeout: null
     alerting:
@@ -8838,7 +8838,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:19:30'
-    modifiedAt: '2023-05-30 16:05:50'
+    modifiedAt: '2023-05-30 21:43:38'
     author: smille29@its.jnj.com
   jobs/DEV_BBL_PIPELINE_JOB:
     name: BBL_PIPELINE_JOB
@@ -8847,7 +8847,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Photon_Medium
+    jobSize: Prophecy_Large_D12_2_10
     scheduleCron: 0 0 9 ? * 7 *
     timeout: null
     alerting:
@@ -8887,7 +8887,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:21:30'
-    modifiedAt: '2023-05-30 18:02:58'
+    modifiedAt: '2023-05-30 21:47:05'
     author: smille29@its.jnj.com
   jobs/DEV_BBN_PIPELINE_JOB:
     name: BBN_PIPELINE_JOB
@@ -8896,7 +8896,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Photon_Medium
+    jobSize: Prophecy_Large_D12_2_10
     scheduleCron: 0 0 8 ? * 7 *
     timeout: null
     alerting:
@@ -8936,7 +8936,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:22:48'
-    modifiedAt: '2023-05-30 18:08:16'
+    modifiedAt: '2023-05-30 21:48:23'
     author: smille29@its.jnj.com
   jobs/DEV_MRS_PIPELINE_JOB:
     name: MRS_PIPELINE_JOB
@@ -8945,7 +8945,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Photon_Medium
+    jobSize: Prophecy_Large_D12_2_10
     scheduleCron: 0 0 11 ? * 7 *
     timeout: null
     alerting:
@@ -8984,7 +8984,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:23:52'
-    modifiedAt: '2023-05-30 20:10:57'
+    modifiedAt: '2023-05-30 22:05:25'
     author: smille29@its.jnj.com
   jobs/DEV_HCS_PIPELINE_JOB:
     name: HCS_PIPELINE_JOB
@@ -8993,7 +8993,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Photon_Medium
+    jobSize: Prophecy_Large_D12_2_10
     scheduleCron: 0 30 2 ? * 7 *
     timeout: null
     alerting:
@@ -9031,7 +9031,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:25:32'
-    modifiedAt: '2023-05-30 19:09:27'
+    modifiedAt: '2023-05-30 21:58:01'
     author: smille29@its.jnj.com
   jobs/DEV_MBP_PIPELINE_JOB:
     name: MBP_PIPELINE_JOB
@@ -9040,7 +9040,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Photon_Medium
+    jobSize: Prophecy_Large_D12_2_10
     scheduleCron: 0 0 10 ? * 7 *
     timeout: null
     alerting:
@@ -9078,7 +9078,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:26:51'
-    modifiedAt: '2023-05-30 20:01:47'
+    modifiedAt: '2023-05-30 22:04:21'
     author: smille29@its.jnj.com
   jobs/DEV_P01_PIPELINE_JOB:
     name: P01_PIPELINE_JOB
@@ -9087,7 +9087,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Photon_Medium
+    jobSize: Prophecy_Large_D12_2_10
     scheduleCron: 0 0 6 ? * 7 *
     timeout: null
     alerting:
@@ -9127,7 +9127,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:27:50'
-    modifiedAt: '2023-05-30 20:17:59'
+    modifiedAt: '2023-05-30 22:07:29'
     author: smille29@its.jnj.com
   jobs/DEV_SVS_PIPELINE_JOB:
     name: SVS_PIPELINE_JOB
@@ -9136,7 +9136,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Large
+    jobSize: Prophecy_Large_D12_2_10
     scheduleCron: 0 0 2 ? * 7 *
     timeout: null
     alerting:
@@ -9171,7 +9171,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:30:48'
-    modifiedAt: '2023-05-30 20:25:16'
+    modifiedAt: '2023-05-30 22:12:53'
     author: smille29@its.jnj.com
   jobs/DEV_ANS_PIPELINE_JOB:
     name: ANS_PIPELINE_JOB
@@ -9228,7 +9228,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Photon_Medium
+    jobSize: Prophecy_Large_D12_2_10
     scheduleCron: 0 30 1 ? * 7 *
     timeout: null
     alerting:
@@ -9263,7 +9263,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:42:32'
-    modifiedAt: '2023-05-30 18:24:56'
+    modifiedAt: '2023-05-30 21:51:53'
     author: smille29@its.jnj.com
   jobs/DEV_FSN_PIPELINE_JOB:
     name: FSN_PIPELINE_JOB
@@ -9272,7 +9272,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Photon_Medium
+    jobSize: Prophecy_Large_D12_2_10
     scheduleCron: 0 0 2 ? * 7 *
     timeout: null
     alerting:
@@ -9307,7 +9307,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:44:07'
-    modifiedAt: '2023-05-30 18:39:46'
+    modifiedAt: '2023-05-30 21:54:42'
     author: smille29@its.jnj.com
   jobs/DEV_MTK_PIPELINE_JOB:
     name: MTK_PIPELINE_JOB
@@ -9364,7 +9364,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Photon_Medium
+    jobSize: Prophecy_Large_D12_2_10
     scheduleCron: 0 30 4 ? * 7 *
     timeout: null
     alerting:
@@ -9401,7 +9401,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:16:30'
-    modifiedAt: '2023-05-30 20:33:20'
+    modifiedAt: '2023-05-30 22:13:44'
     author: smille29@its.jnj.com
   jobs/DEV_VST_PIPELINE_JOB:
     name: VST_PIPELINE_JOB
@@ -9434,7 +9434,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Photon_Medium
+    jobSize: Prophecy_Large_D12_2_10
     scheduleCron: 0 30 1 ? * 7 *
     timeout: null
     alerting:
@@ -9472,7 +9472,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:18:46'
-    modifiedAt: '2023-05-30 18:48:43'
+    modifiedAt: '2023-05-30 21:55:41'
     author: smille29@its.jnj.com
   jobs/DEV_BW2_PIPELINE_JOB:
     name: BW2_PIPELINE_JOB
@@ -9481,7 +9481,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Photon_Medium
+    jobSize: Prophecy_Large_D12_2_10
     scheduleCron: 0 0 12 ? * 7 *
     timeout: null
     alerting:
@@ -9517,7 +9517,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:19:52'
-    modifiedAt: '2023-05-30 18:16:06'
+    modifiedAt: '2023-05-30 21:49:29'
     author: smille29@its.jnj.com
   jobs/DEV_DEU_PIPELINE_JOB:
     name: DEU_PIPELINE_JOB
@@ -9526,7 +9526,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Photon_Medium
+    jobSize: Prophecy_Large_D12_2_10
     scheduleCron: 0 30 5 ? * 7 *
     timeout: null
     alerting:
@@ -9563,7 +9563,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:22:23'
-    modifiedAt: '2023-05-30 20:41:14'
+    modifiedAt: '2023-05-30 21:52:50'
     author: smille29@its.jnj.com
   jobs/DEV_DJD_PIPELINE_JOB:
     name: DJD_PIPELINE_JOB
@@ -9572,7 +9572,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Photon_Medium
+    jobSize: Prophecy_Large_D12_2_10
     scheduleCron: 0 0 0 ? * 7 *
     timeout: null
     alerting:
@@ -9604,7 +9604,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:22:54'
-    modifiedAt: '2023-05-30 21:08:19'
+    modifiedAt: '2023-05-30 21:53:46'
     author: smille29@its.jnj.com
   jobs/DEV_GMD_PIPELINE_JOB:
     name: GMD_PIPELINE_JOB
@@ -9613,7 +9613,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Photon_Medium
+    jobSize: Prophecy_Large_D12_2_10
     scheduleCron: 0 30 1 ? * 7 *
     timeout: null
     alerting:
@@ -9650,7 +9650,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:23:35'
-    modifiedAt: '2023-05-30 21:12:02'
+    modifiedAt: '2023-05-30 21:56:57'
     author: smille29@its.jnj.com
   jobs/DEV_JEM_PIPELINE_JOB:
     name: JEM_PIPELINE_JOB
@@ -9659,7 +9659,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Photon_Medium
+    jobSize: Prophecy_Large_D12_2_10
     scheduleCron: 0 0 0 ? * 7 *
     timeout: null
     alerting:
@@ -9696,7 +9696,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:25:27'
-    modifiedAt: '2023-05-30 21:15:38'
+    modifiedAt: '2023-05-30 21:59:56'
     author: smille29@its.jnj.com
   jobs/DEV_JES_PIPELINE_JOB:
     name: JES_PIPELINE_JOB
@@ -9705,7 +9705,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Photon_Medium
+    jobSize: Prophecy_Large_D12_2_10
     scheduleCron: 0 0 2 ? * 7 *
     timeout: null
     alerting:
@@ -9742,7 +9742,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:26:11'
-    modifiedAt: '2023-05-30 21:19:10'
+    modifiedAt: '2023-05-30 22:00:48'
     author: smille29@its.jnj.com
   jobs/DEV_JET_PIPELINE_JOB:
     name: JET_PIPELINE_JOB
@@ -9751,7 +9751,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Photon_Medium
+    jobSize: Prophecy_Large_D12_2_10
     scheduleCron: 0 0 2 ? * 7 *
     timeout: null
     alerting:
@@ -9788,7 +9788,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:26:51'
-    modifiedAt: '2023-05-30 21:22:48'
+    modifiedAt: '2023-05-30 22:01:45'
     author: smille29@its.jnj.com
   jobs/DEV_JNS_PIPELINE_JOB:
     name: JNS_PIPELINE_JOB
@@ -9821,7 +9821,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Photon_Medium
+    jobSize: Prophecy_Large_D12_2_10
     scheduleCron: 0 0 2 ? * 7 *
     timeout: null
     alerting:
@@ -9858,7 +9858,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:28:09'
-    modifiedAt: '2023-05-30 21:26:06'
+    modifiedAt: '2023-05-30 22:03:10'
     author: smille29@its.jnj.com
   jobs/DEV_MTR_PIPELINE_JOB:
     name: MTR_PIPELINE_JOB
@@ -9867,7 +9867,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Photon_Medium
+    jobSize: Prophecy_Large_D12_2_10
     scheduleCron: 0 0 2 ? * 7 *
     timeout: null
     alerting:
@@ -9901,7 +9901,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:28:47'
-    modifiedAt: '2023-05-30 21:31:37'
+    modifiedAt: '2023-05-30 22:06:27'
     author: smille29@its.jnj.com
   jobs/DEV_SJD_PIPELINE_JOB:
     name: SJD_PIPELINE_JOB
@@ -9910,7 +9910,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Photon_Medium
+    jobSize: Prophecy_Large_D12_2_10
     scheduleCron: 0 0 0 ? * 7 *
     timeout: null
     alerting:
@@ -9946,7 +9946,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:29:19'
-    modifiedAt: '2023-05-30 21:35:16'
+    modifiedAt: '2023-05-30 22:08:29'
     author: smille29@its.jnj.com
   jobs/JOB_MD_BOM_HDR:
     name: JOB_MD_BOM_HDR
@@ -10281,7 +10281,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Photon_Medium
+    jobSize: Prophecy_Large_D12_2_10
     scheduleCron: 0 0 8 ? * 7 *
     timeout: null
     alerting:
@@ -10320,7 +10320,7 @@ jobs:
       clusterId: null
     enabled: false
     createdAt: '2023-04-26 20:17:30'
-    modifiedAt: '2023-05-30 19:17:38'
+    modifiedAt: '2023-05-30 21:58:58'
     author: smille29@its.jnj.com
   jobs/JOB_MD_SLS_DOC_PTNR_FUNC_HM2:
     name: JOB_MD_SLS_DOC_PTNR_FUNC_HM2
