--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -10330,7 +10330,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Small
+    jobSize: Prophecy_Medium_D16_2_5
     scheduleCron: 0 0 0 1/1 * ? *
     timeout: null
     alerting:
@@ -10345,9 +10345,9 @@ jobs:
       clusterMode:
         Single: {}
       clusterId: null
-    enabled: null
+    enabled: false
     createdAt: '2023-04-26 20:30:55'
-    modifiedAt: '2023-05-26 19:10:25'
+    modifiedAt: '2023-05-30 22:22:42'
     author: jcacere7@its.jnj.com
   jobs/JOB_MD_DOC_ITM_INCM_INVC_HM2:
     name: JOB_MD_DOC_ITM_INCM_INVC_HM2
