--- a/src/pipelines/SAP_MD_MFG_ORDER_ATL_BBL_BBN_BWI_HM2_HMD_MBP_MRS_P01_SVS/pbt_aspects.yml
+++ b/src/pipelines/SAP_MD_MFG_ORDER_ATL_BBL_BBN_BWI_HM2_HMD_MBP_MRS_P01_SVS/pbt_aspects.yml
@@ -1,5 +1,14 @@
 version: 1
 configurations:
-- default
+- svs
+- p01
 - bbl
+- hmd
+- mbp
+- bwi
+- mrs
+- default
+- hm2
+- atl
+- bbn
 dependencies: []
