--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2755,10 +2755,11 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-26 07:40:04'
-    modifiedAt: '2023-05-26 12:46:42'
+    modifiedAt: '2023-05-31 09:28:45'
     datasets:
       inputs:
       - datasets/DS_SAP_01_AUFK
+      - datasets/DS_SAP_01_JEST
       outputs:
       - datasets/MD_MFG_ORDER
     subgraphs: []
@@ -2771,7 +2772,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-26 09:58:48'
-    modifiedAt: '2023-05-31 09:18:59'
+    modifiedAt: '2023-05-31 09:23:11'
     datasets:
       inputs:
       - datasets/DS_SAP_01_AUFK
@@ -3676,7 +3677,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-31 09:18:26'
+    modifiedAt: '2023-05-31 09:28:45'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
