JEKT-2083 Created new pipeline for pipelines that have AFKO & JEST but do not have TJ02T ❇️ New     - Pipeline        - SAP_MD_MFG_ORDER_BBA_FSN
🔁 Modified
    - Dataset
       - MD_MFG_ORDER

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2801,6 +2801,24 @@ pipelines:
       - datasets/MD_MFG_ORDER
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_MD_MFG_ORDER_BBA_FSN:
+    name: SAP_MD_MFG_ORDER_BBA_FSN
+    description: ATL, BBL, BBN, BWI, HM2, HMD, MBP, MRS, P01, SVS
+    author: natkins7@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-31 09:37:09'
+    modifiedAt: '2023-05-31 09:50:23'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_AFKO
+      - datasets/DS_SAP_01_AUFK
+      - datasets/DS_SAP_01_JEST
+      outputs:
+      - datasets/MD_MFG_ORDER
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -3677,7 +3695,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-31 09:28:45'
+    modifiedAt: '2023-05-31 09:50:22'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
