--- a/src/pipelines/SAP_MD_MFG_ORDER_BBA_FSN/pbt_aspects.yml
+++ b/src/pipelines/SAP_MD_MFG_ORDER_BBA_FSN/pbt_aspects.yml
@@ -1,14 +1,6 @@
 version: 1
 configurations:
-- svs
-- p01
-- bbl
-- hmd
-- mbp
-- bwi
-- mrs
+- bba
+- fsn
 - default
-- hm2
-- atl
-- bbn
 dependencies: []
