JEKT-2083 Pipeline name & package name changed 🔁 Modified     - Pipeline        - SAP_MD_MFG_ORDER_BBA_FSN_TAI

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2802,14 +2802,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/SAP_MD_MFG_ORDER_BBA_FSN:
-    name: SAP_MD_MFG_ORDER_BBA_FSN
-    description: ATL, BBL, BBN, BWI, HM2, HMD, MBP, MRS, P01, SVS
+    name: SAP_MD_MFG_ORDER_BBA_FSN_TAI
+    description: MFG Orders for BBA, FSN, TAI (have JEST, AFKO but no TJ02T)
     author: natkins7@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-05-31 09:37:09'
-    modifiedAt: '2023-05-31 09:55:04'
+    modifiedAt: '2023-05-31 10:14:11'
     datasets:
       inputs:
       - datasets/DS_SAP_01_AFKO
