--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2819,6 +2819,20 @@ pipelines:
       - datasets/MD_MFG_ORDER
     subgraphs: []
     dependencies: {}
+  pipelines/JDE_MD_MFG_ORDER:
+    name: JDE_MD_MFG_ORDER
+    description: MFG Order for BW2, DEU, DJD, GMD, JEM, JES, JET, JSW, MTR, SJD
+    author: natkins7@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-31 10:32:37'
+    modifiedAt: '2023-05-31 10:42:57'
+    datasets:
+      inputs: []
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
