JEKT-2083 Created new dataset and deleted filter ❇️ New     - Dataset        - DS_JDE_01_F4801_NC
🔁 Modified
    - Pipeline
       - JDE_MD_MFG_ORDER

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2827,9 +2827,10 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-31 10:32:37'
-    modifiedAt: '2023-05-31 10:42:57'
+    modifiedAt: '2023-05-31 10:48:33'
     datasets:
-      inputs: []
+      inputs:
+      - datasets/DS_JDE_01_F4801_NC
       outputs: []
     subgraphs: []
     dependencies: {}
@@ -8459,6 +8460,21 @@ datasets:
         author: natkins7@its.jnj.com
         createdAt: '2023-05-26 12:51:43'
         modifiedAt: '2023-05-26 12:51:43'
+  datasets/DS_JDE_01_F4801_NC:
+    name: DS_JDE_01_F4801_NC
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-05-31 10:47:25'
+    modifiedAt: '2023-05-31 10:47:25'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-05-31 10:47:25'
+        modifiedAt: '2023-05-31 10:47:25'
 templates: {}
 jobs:
   jobs/DEV_ATL_PIPELINE_JOB:
