--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2827,11 +2827,12 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-31 10:32:37'
-    modifiedAt: '2023-05-31 11:37:17'
+    modifiedAt: '2023-05-31 11:52:38'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F4801_NC
-      outputs: []
+      outputs:
+      - datasets/MD_MFG_ORDER
     subgraphs: []
     dependencies: {}
 datasets:
@@ -3710,7 +3711,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-31 09:50:22'
+    modifiedAt: '2023-05-31 11:52:38'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
