JEKT-2191 Job created and src_sys added ❇️ New     - Job        - JOB_MD_SUP_PRCHSNG_ORG

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -11012,6 +11012,32 @@ jobs:
     createdAt: '2023-05-04 18:12:08'
     modifiedAt: '2023-05-11 22:50:42'
     author: fsano1@its.jnj.com
+  jobs/JOB_MD_SUP_PRCHSNG_ORG:
+    name: JOB_MD_SUP_PRCHSNG_ORG
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SAP_MD_SUP_PRCHSNG_ORG
+    - pipelines/JDE_MD_SUP_PRCHSNG_ORG
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-05-31 12:09:22'
+    modifiedAt: '2023-05-31 12:22:20'
+    author: mbolado1@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
