JEKT-2083 Job created ❇️ New     - Job        - JOB_MF_MFG_ORDER

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -10424,6 +10424,35 @@ jobs:
     createdAt: '2023-05-05 15:37:12'
     modifiedAt: '2023-05-11 22:59:57'
     author: jcovezd1@its.jnj.com
+  jobs/JOB_MF_MFG_ORDER:
+    name: JOB_MF_MFG_ORDER
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SAP_MD_MFG_ORDER_HCS
+    - pipelines/SAP_MD_MFG_ORDER_ATL_BBL_BBN_BWI_HM2_HMD_MBP_MRS_P01_SVS
+    - pipelines/JDE_MD_MFG_ORDER
+    - pipelines/SAP_MD_MFG_ORDER_GEU
+    - pipelines/SAP_MD_MFG_ORDER_BBA_FSN
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-05-31 12:21:06'
+    modifiedAt: '2023-05-31 12:35:10'
+    author: natkins7@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
