JEKT-2083 Updated job name as it had a typo 🔁 Modified     - Job        - JOB_MD_MFG_ORDER

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -10425,7 +10425,7 @@ jobs:
     modifiedAt: '2023-05-11 22:59:57'
     author: jcovezd1@its.jnj.com
   jobs/JOB_MF_MFG_ORDER:
-    name: JOB_MF_MFG_ORDER
+    name: JOB_MD_MFG_ORDER
     description: ''
     fabricUID: 32
     scheduler:
@@ -10451,7 +10451,7 @@ jobs:
       clusterId: null
     enabled: null
     createdAt: '2023-05-31 12:21:06'
-    modifiedAt: '2023-05-31 12:35:10'
+    modifiedAt: '2023-05-31 12:37:22'
     author: natkins7@its.jnj.com
 functions:
   author: null
