JEKT-2394 - 🔁 Modified - Fixed Peer Review callouts of some Pipelines not with correct object.     - Job        - HCS_PIPELINE_JOB        - FSN_PIPELINE_JOB        - BW2_PIPELINE_JOB        - SVS_PIPELINE_JOB        - BWI_PIPELINE_JOB

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -9016,6 +9016,7 @@ jobs:
     - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/SAP_MD_DELV_LINE_FSN_GEU_HCS_MRS_P01_SVS_ATL
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_hcs
+    - pipelines/MD_SAP_MATL_UOM_MBP_SVS_P01_HCS_HMD
     - pipelines/MD_PRCH_DELV_CNFRMS_7
     - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_4
     - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
@@ -9031,7 +9032,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:25:32'
-    modifiedAt: '2023-05-30 21:58:01'
+    modifiedAt: '2023-05-31 17:50:24'
     author: smille29@its.jnj.com
   jobs/DEV_MBP_PIPELINE_JOB:
     name: MBP_PIPELINE_JOB
@@ -9147,6 +9148,7 @@ jobs:
     pipelines:
     - pipelines/SAP_01_MD_PLNT
     - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_7
+    - pipelines/MD_MATL_SAP_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI
     - pipelines/SAP_01_MD_BILL_DOC_HDR_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/SAP_MD_CRNCY_SVS_BWI_ATL
     - pipelines/SAP_01_MD_SLS_ORDR_BBA_BBL_BBN_BWI_TAI_GEU_HCS_MRS_P01_MBP_SVS_FSN
@@ -9171,7 +9173,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:30:48'
-    modifiedAt: '2023-05-30 22:12:53'
+    modifiedAt: '2023-05-31 17:52:26'
     author: smille29@its.jnj.com
   jobs/DEV_ANS_PIPELINE_JOB:
     name: ANS_PIPELINE_JOB
@@ -9239,6 +9241,7 @@ jobs:
     pipelines:
     - pipelines/SAP_01_MD_PLNT
     - pipelines/SAP_MD_MATL_INV_BWI
+    - pipelines/MD_MATL_SAP_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI
     - pipelines/MD_SAP_MATL_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_MRS
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_bwi
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST
@@ -9263,7 +9266,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:42:32'
-    modifiedAt: '2023-05-30 21:51:53'
+    modifiedAt: '2023-05-31 17:46:17'
     author: smille29@its.jnj.com
   jobs/DEV_FSN_PIPELINE_JOB:
     name: FSN_PIPELINE_JOB
@@ -9282,6 +9285,7 @@ jobs:
       onFailure: false
     pipelines:
     - pipelines/SAP_01_MD_PLNT
+    - pipelines/MD_DELV_2
     - pipelines/SAP_01_MD_SLS_ORDR_BBA
     - pipelines/MD_MATL_SAP_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI
     - pipelines/MD_SAP_MATL_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_MRS
@@ -9307,7 +9311,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:44:07'
-    modifiedAt: '2023-05-30 21:54:42'
+    modifiedAt: '2023-05-31 17:48:16'
     author: smille29@its.jnj.com
   jobs/DEV_MTK_PIPELINE_JOB:
     name: MTK_PIPELINE_JOB
@@ -9500,6 +9504,7 @@ jobs:
     - pipelines/MD_DELV_9
     - pipelines/JDE_01_MD_MATL_BOM
     - pipelines/JDE_01_MD_PO_SCHED_LINE_DELV
+    - pipelines/JDE_BW2_MD_MATL
     - pipelines/JDE_01_MD_SHIP_MTK
     - pipelines/JDE_MD_SLS_ORDR_LINE_
     - pipelines/JDE_01_MD_CUST
@@ -9517,7 +9522,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:19:52'
-    modifiedAt: '2023-05-30 21:49:29'
+    modifiedAt: '2023-05-31 17:44:05'
     author: smille29@its.jnj.com
   jobs/DEV_DEU_PIPELINE_JOB:
     name: DEU_PIPELINE_JOB
