JEKT-2083 Removed HM2 references across the pipeline name/desc/package and opened job 🔁 Modified     - Pipeline        - SAP_MD_MFG_ORDER_ATL_BBL_BBN_BWI_HMD_MBP_MRS_P01_SVS     - Job        - JOB_MD_MFG_ORDER

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2783,14 +2783,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/SAP_MD_MFG_ORDER_ATL_BBL_BBN_BWI_HM2_HMD_MBP_MRS_P01_SVS:
-    name: SAP_MD_MFG_ORDER_ATL_BBL_BBN_BWI_HM2_HMD_MBP_MRS_P01_SVS
-    description: ATL, BBL, BBN, BWI, HM2, HMD, MBP, MRS, P01, SVS
+    name: SAP_MD_MFG_ORDER_ATL_BBL_BBN_BWI_HMD_MBP_MRS_P01_SVS
+    description: ATL, BBL, BBN, BWI, HMD, MBP, MRS, P01, SVS
     author: natkins7@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-05-26 12:35:49'
-    modifiedAt: '2023-06-01 14:28:56'
+    modifiedAt: '2023-06-01 16:46:42'
     datasets:
       inputs:
       - datasets/DS_SAP_01_AFKO
@@ -10451,7 +10451,7 @@ jobs:
       clusterId: null
     enabled: null
     createdAt: '2023-05-31 12:21:06'
-    modifiedAt: '2023-05-31 12:37:22'
+    modifiedAt: '2023-06-01 16:47:30'
     author: natkins7@its.jnj.com
 functions:
   author: null
