JEKT-2509 Added new dataset, ran pipelines into CDL and updated HMx config to 100 ❇️ New     - Dataset        - MD_OWN_EXPLN_FOR_TERM_OF_PMT
🔁 Modified
    - Pipeline
       - SAP_MD_OWN_EXPLN_FOR_TERM_OF_PMT

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -3163,11 +3163,12 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-24 12:46:11'
-    modifiedAt: '2023-05-30 09:34:35'
+    modifiedAt: '2023-06-05 16:34:26'
     datasets:
       inputs:
       - datasets/DS_SAP_01_T052U
-      outputs: []
+      outputs:
+      - datasets/MD_OWN_EXPLN_FOR_TERM_OF_PMT
     subgraphs: []
     dependencies: {}
 datasets:
@@ -8781,6 +8782,21 @@ datasets:
         author: natkins7@its.jnj.com
         createdAt: '2023-05-24 12:53:16'
         modifiedAt: '2023-05-24 12:53:16'
+  datasets/MD_OWN_EXPLN_FOR_TERM_OF_PMT:
+    name: MD_OWN_EXPLN_FOR_TERM_OF_PMT
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-06-05 16:23:35'
+    modifiedAt: '2023-06-05 16:25:52'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-06-05 16:23:35'
+        modifiedAt: '2023-06-05 16:23:35'
 templates: {}
 jobs:
   jobs/DEV_ATL_PIPELINE_JOB:
