--- a/src/datasets/MD_SUP_PRCHSNG_ORG/pbt_aspects.yml
+++ b/src/datasets/MD_SUP_PRCHSNG_ORG/pbt_aspects.yml
@@ -135,7 +135,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: OWN_EXPLN_OF_TERM_OF_PMT
+  - name: SHIPPING_COND_CD
     type: string
     nullable: true
     metadata:
