JEKT-1395 - 🔁 Modified - Added logic to Pipeline for Invalid Dates paste 19000101     - Pipeline        - SAP_01_MD_SLS_ORDR_BBN_GEU_P01_MBP_SVS     - Dataset        - MD_SLS_ORDR        - DS_SAP_01_TVKOT

--- a/src/datasets/DS_SAP_01_TVKOT/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_01_TVKOT/pbt_aspects.yml
@@ -9,7 +9,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: SPRAS
+  - name: _deleted_
     type: string
     nullable: true
     metadata:
@@ -17,6 +17,13 @@ schema:
       mappings: []
       tags: []
   - name: VKORG
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SPRAS
     type: string
     nullable: true
     metadata:
@@ -65,7 +72,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _deleted_
+  - name: _infa_bigint_sequence_
     type: string
     nullable: true
     metadata:
