JEKT-1210 - 🔁 Modified - Created a new Pipeline v2 for GMD to eliminate the ghost Config DBTABLE1 that gets included when Merging to Beta Branch and further.  The old Pipelines is NOT referenced in any Jobs and will be deleted in the future.     - Dataset        - DS_JDE_F0005        - MD_MATL_MVMT_HDR        - DS_JDE_F4111     - Job        - GMD_PIPELINE_JOB        - JOB_MD_MATL_MVMT_HDR
❇️ New
    - Pipeline
       - JDE_MD_MATL_MVMT_HDR_GMD_v2

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -3157,6 +3157,23 @@ pipelines:
       - datasets/MD_SLS_ORDR_SCHED_LINE_DELV
     subgraphs: []
     dependencies: {}
+  pipelines/JDE_MD_MATL_MVMT_HDR_GMD_v2:
+    name: JDE_MD_MATL_MVMT_HDR_GMD_v2
+    description: ''
+    author: smille29@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-06-09 20:00:00'
+    modifiedAt: '2023-06-09 20:16:00'
+    datasets:
+      inputs:
+      - datasets/DS_JDE_F0005
+      - datasets/DS_JDE_F4111
+      outputs:
+      - datasets/MD_MATL_MVMT_HDR
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -4453,7 +4470,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-06-09 20:07:06'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -7873,7 +7890,7 @@ datasets:
     description: ''
     author: ypatel8@its.jnj.com
     createdAt: '2023-05-02 17:12:56'
-    modifiedAt: '2023-05-25 14:03:15'
+    modifiedAt: '2023-06-09 20:04:46'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -8128,7 +8145,7 @@ datasets:
     description: ''
     author: ggrilo1@its.jnj.com
     createdAt: '2023-04-13 08:19:56'
-    modifiedAt: '2023-05-25 14:02:53'
+    modifiedAt: '2023-06-09 20:04:26'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -9645,9 +9662,9 @@ jobs:
       onFailure: false
     pipelines:
     - pipelines/JDE_MD_DELV_LINE_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
-    - pipelines/JDE_MD_MATL_MVMT_HDR_GMD
     - pipelines/JDE_MD_BOM_HDR_BW2
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST_JDE
+    - pipelines/JDE_MD_MATL_MVMT_HDR_GMD_v2
     - pipelines/JDE_01_MD_SLS_ORDR_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
     - pipelines/JDE_MD_MATL_LOC_GMD
     - pipelines/MD_DELV_9
@@ -9672,7 +9689,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:23:35'
-    modifiedAt: '2023-05-31 02:49:32'
+    modifiedAt: '2023-06-09 20:22:26'
     author: smille29@its.jnj.com
   jobs/DEV_JEM_PIPELINE_JOB:
     name: JEM_PIPELINE_JOB
@@ -10808,8 +10825,8 @@ jobs:
       onSuccess: false
       onFailure: false
     pipelines:
-    - pipelines/JDE_MD_MATL_MVMT_HDR_GMD
     - pipelines/JDE_MD_MATL_MVMT_HDR_DEU_DJD_MTR_JEM_JES_JET__JSW
+    - pipelines/JDE_MD_MATL_MVMT_HDR_GMD_v2
     - pipelines/JDE_MD_MATL_MVMT_HDR_BW2
     - pipelines/SAP_MD_MATL_MVMT_HDR_HMD
     - pipelines/SAP_MD_MATL_MVMT_HDR
@@ -10819,7 +10836,7 @@ jobs:
       clusterId: null
     enabled: null
     createdAt: '2023-04-13 10:18:29'
-    modifiedAt: '2023-05-26 15:32:56'
+    modifiedAt: '2023-06-09 20:21:06'
     author: ggrilo1@its.jnj.com
   jobs/JOB_MD_MATL_MVMT_HDR_HM2:
     name: JOB_MD_MATL_MVMT_HDR_HM2
