--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -3006,13 +3006,13 @@ pipelines:
     dependencies: {}
   pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_1:
     name: SAP_MD_SLS_ORDR_SCHED_LINE_DELV_tai
-    description: Mapping pipeline  ['taishan']
+    description: Mapping pipeline  ['tai']
     author: skostadi@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-06-13 16:02:41'
+    modifiedAt: '2023-06-13 16:11:55'
     datasets:
       inputs: []
       outputs:
@@ -3081,13 +3081,13 @@ pipelines:
     dependencies: {}
   pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_5:
     name: SAP_MD_SLS_ORDR_SCHED_LINE_DELV_atl_fsn
-    description: Mapping pipeline  ['atlas', 'fsn']
+    description: Mapping pipeline  ['atl', 'fsn']
     author: skostadi@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-06-13 15:57:22'
+    modifiedAt: '2023-06-13 16:12:16'
     datasets:
       inputs: []
       outputs:
@@ -3117,7 +3117,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-05-04 17:02:32'
+    modifiedAt: '2023-06-13 16:14:38'
     datasets:
       inputs: []
       outputs:
@@ -3911,7 +3911,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-06-13 16:13:54'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
