JEKT-1594 🔁 Modified ARR_DTTM rule     - Pipeline        - SAP_MD_SLS_ORDR_SCHED_LINE_DELV_4_hcs_mrs_bbn_bbl_bba     - Dataset        - MD_SLS_ORDR_SCHED_LINE_DELV

--- a/src/datasets/MD_SLS_ORDR_SCHED_LINE_DELV/pbt_aspects.yml
+++ b/src/datasets/MD_SLS_ORDR_SCHED_LINE_DELV/pbt_aspects.yml
@@ -591,8 +591,8 @@ schema:
       mappings: []
       tags: []
   - name: DAI_ETL_ID
-    type: integer
-    nullable: false
+    type: void
+    nullable: true
     metadata:
       description: ''
       mappings: []
