--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -3066,13 +3066,13 @@ pipelines:
     dependencies: {}
   pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_4:
     name: SAP_MD_SLS_ORDR_SCHED_LINE_DELV_4_hcs_mrs_bbn_bbl_bba
-    description: Mapping pipeline  ['hcs', 'mrs', 'btb_na', 'btb_latam', 'bba']
+    description: Mapping pipeline  ['hcs', 'mrs', 'bbn', 'bbl', 'bba']
     author: skostadi@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-05-04 16:57:46'
+    modifiedAt: '2023-06-13 16:22:29'
     datasets:
       inputs: []
       outputs:
@@ -3911,7 +3911,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-06-13 16:17:35'
+    modifiedAt: '2023-06-13 16:21:56'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
