JEKT-1594 🔁 Modified Time rule for ARR_DTTM     - Pipeline        - SAP_MD_SLS_ORDR_SCHED_LINE_DELV_geu     - Dataset        - MD_SLS_ORDR_SCHED_LINE_DELV

--- a/src/datasets/MD_SLS_ORDR_SCHED_LINE_DELV/pbt_aspects.yml
+++ b/src/datasets/MD_SLS_ORDR_SCHED_LINE_DELV/pbt_aspects.yml
@@ -591,8 +591,8 @@ schema:
       mappings: []
       tags: []
   - name: DAI_ETL_ID
-    type: void
-    nullable: true
+    type: integer
+    nullable: false
     metadata:
       description: ''
       mappings: []
