JEKT-2901 - 🔁 Modified - Updated Pipeline to use Config Spark Expression for BOM_NUM field as JES is different Rule     - Pipeline        - JDE_MD_MATL_BOM_BW2_DEU_GMD_JEM_JES_JET_JSW_MTR_SJD     - Dataset        - MD_MATL_BOM        - JDE_01_f3002_f3002_adt

--- a/src/datasets/JDE_01_f3002_f3002_adt/pbt_aspects.yml
+++ b/src/datasets/JDE_01_f3002_f3002_adt/pbt_aspects.yml
@@ -37,7 +37,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: IXCPNT
+  - name: IXCPNB
     type: string
     nullable: true
     metadata:
@@ -94,6 +94,13 @@ schema:
       mappings: []
       tags: []
   - name: IXCMCU
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: IXCPNT
     type: string
     nullable: true
     metadata:
@@ -507,6 +514,90 @@ schema:
       mappings: []
       tags: []
   - name: IXTDAY
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: IXAING
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: IXSUCO
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: IXSTRC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: IXENDC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: IXAPSC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: IXBSEQAN
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: IXCFRGUID
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: IXCFRMKEY
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: IXCFRPID
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: IXCFRUSER
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: IXISDELETE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: IXCFRSEQN
     type: string
     nullable: true
     metadata:
