--- a/src/datasets/MD_MATL_BOM/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_BOM/pbt_aspects.yml
@@ -88,7 +88,7 @@ schema:
       tags: []
   - name: _deleted_
     type: string
-    nullable: false
+    nullable: true
     metadata:
       description: ''
       mappings: []
