--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -11932,6 +11932,7 @@ jobs:
     pipelines:
     - pipelines/SAP_MD_MATL_MBP
     - pipelines/MD_MATL_SAP_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI
+    - pipelines/JDE_MD_MATL_JET
     - pipelines/SAP_MD_MATL_BBL
     - pipelines/SAP_MD_MATL_HCS
     - pipelines/JDE_BW2_MD_MATL
@@ -11945,7 +11946,7 @@ jobs:
       clusterId: null
     enabled: null
     createdAt: '2023-05-05 13:05:54'
-    modifiedAt: '2023-05-12 21:12:41'
+    modifiedAt: '2023-06-13 22:31:38'
     author: natkins7@its.jnj.com
   jobs/MD_MATL_HM2_JOB:
     name: JOB_MD_MATL_HM2
