--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1,6 +1,6 @@
 name: CDL_MD_L1
 description: Project for storing MD L1 pipelines - tied to JEKT
-version: 0.0.1
+version: RC4.0.0
 author: skostadi@its.jnj.com
 language: python
 buildSystem: ''
