[Prophecy] Release version JEKT-2500

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1,6 +1,6 @@
 name: CDL_MD_L1
 description: Project for storing MD L1 pipelines - tied to JEKT
-version: RC4.0.0
+version: JEKT-2500
 author: skostadi@its.jnj.com
 language: python
 buildSystem: ''
