JEKT-2182 SAP Pipeline development started ❇️ New     - Dataset        - DS_SAP_01_VBFA     - Pipeline        - SAP_MD_SLS_DOC_HIER_BBA_BBL_BBN_MBP_HCS_GEU_MRS_TAI_SVS_BWI_P01_ATL_FSN_HM2
🔁 Modified
    - Dataset
       - DS_SAP_01_VBAK
       - DS_SAP_01_VBAP

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -4197,6 +4197,23 @@ pipelines:
       - datasets/MD_MATL_LOC
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_MD_SLS_DOC_HIER_BBA_BBL_BBN_MBP_HCS_GEU_MRS_TAI_SVS_BWI_P01_ATL_FSN_HM2:
+    name: SAP_MD_SLS_DOC_HIER_BBA_BBL_BBN_MBP_HCS_GEU_MRS_TAI_SVS_BWI_P01_ATL_FSN_HM2
+    description: ''
+    author: mbolado1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-06-15 17:40:31'
+    modifiedAt: '2023-06-15 18:14:27'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_VBAK
+      - datasets/DS_SAP_01_VBAP
+      - datasets/DS_SAP_01_VBFA
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -7413,7 +7430,7 @@ datasets:
     description: ''
     author: jcovezd1@its.jnj.com
     createdAt: '2023-03-31 18:51:09'
-    modifiedAt: '2023-04-12 18:28:45'
+    modifiedAt: '2023-06-15 17:50:44'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -7428,7 +7445,7 @@ datasets:
     description: ''
     author: jcovezd1@its.jnj.com
     createdAt: '2023-03-31 18:52:42'
-    modifiedAt: '2023-05-08 03:29:34'
+    modifiedAt: '2023-06-15 18:14:00'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -10348,6 +10365,21 @@ datasets:
         author: lsorarra@its.jnj.com
         createdAt: '2023-05-22 14:47:12'
         modifiedAt: '2023-05-22 14:47:12'
+  datasets/DS_SAP_01_VBFA:
+    name: DS_SAP_01_VBFA
+    description: ''
+    author: mbolado1@its.jnj.com
+    createdAt: '2023-06-15 17:53:57'
+    modifiedAt: '2023-06-15 17:53:58'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: mbolado1@its.jnj.com
+        createdAt: '2023-06-15 17:53:57'
+        modifiedAt: '2023-06-15 17:53:57'
 templates: {}
 jobs:
   jobs/DEV_ATL_PIPELINE_JOB:
