--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -4205,13 +4205,14 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-06-15 17:40:31'
-    modifiedAt: '2023-06-15 18:14:27'
+    modifiedAt: '2023-06-15 18:48:48'
     datasets:
       inputs:
       - datasets/DS_SAP_01_VBAK
       - datasets/DS_SAP_01_VBAP
       - datasets/DS_SAP_01_VBFA
-      outputs: []
+      outputs:
+      - datasets/MD_SLS_DOC_HIER
     subgraphs: []
     dependencies: {}
 datasets:
@@ -5000,7 +5001,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-06-15 18:48:47'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
