--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -12870,8 +12870,8 @@ jobs:
     modifiedAt: '2023-05-19 15:43:12'
     author: mbolado1@its.jnj.com
   jobs/JOB_MD_MATL_VALUT_HIST_BBN_BBA_BBL_P01_TAI_MRS_HCS_GEU_BWI_MBP_FSN_ATL_SVS_HM2:
-    name: JOB_MD_MATL_VALUT_HIST_BBN_BBA_BBL_P01_TAI_MRS_HCS_GEU_BWI_MBP_FSN_ATL_SVS_HMD
-    description: ''
+    name: JOB_MD_MATL_VALUT_HIST
+    description: BBN_BBA_BBL_P01_TAI_MRS_HCS_GEU_BWI_MBP_FSN_ATL_SVS_HMD
     fabricUID: 32
     scheduler:
       Databricks: {}
@@ -12892,7 +12892,7 @@ jobs:
       clusterId: null
     enabled: null
     createdAt: '2023-05-24 01:44:03'
-    modifiedAt: '2023-05-25 22:36:05'
+    modifiedAt: '2023-06-15 23:09:12'
     author: hgermi1@its.jnj.com
   jobs/JOB_MD_SUP_PRCHSNG_ORG:
     name: JOB_MD_SUP_PRCHSNG_ORG
