--- a/src/pipelines/SAP_MD_SLS_DOC_HIER_BBA_BBL_BBN_MBP_HCS_GEU_MRS_TAI_SVS_BWI_P01_ATL_FSN_HM2/code/configs/resources/config/sap_md_sls_doc_hier_bba_bbl_bbn_mbp_hcs_geu_mrs_tai_svs_bwi_p01_atl_fsn_hm2.conf
+++ b/src/pipelines/SAP_MD_SLS_DOC_HIER_BBA_BBL_BBN_MBP_HCS_GEU_MRS_TAI_SVS_BWI_P01_ATL_FSN_HM2/code/configs/resources/config/sap_md_sls_doc_hier_bba_bbl_bbn_mbp_hcs_geu_mrs_tai_svs_bwi_p01_atl_fsn_hm2.conf
@@ -2,6 +2,7 @@ ConfigDatabase=" "
 "DAI_ETL_ID"=0
 "DATA_FIL_VAL_DATA_AGE_DTTM"="cast(null as string)"
 MANDT="100"
+"SD_UNIQ_DOC_RL_ID"="'#'"
 sourceDatabase=bba
 sourceSystem=bba
 targetSchema="dev_md_l1"
