--- a/src/datasets/MD_SLS_DOC_HIER/pbt_aspects.yml
+++ b/src/datasets/MD_SLS_DOC_HIER/pbt_aspects.yml
@@ -228,7 +228,7 @@ schema:
       tags: []
   - name: SD_UNIQ_DOC_RL_ID
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
@@ -298,13 +298,6 @@ schema:
       tags: []
   - name: LOGL_SYS
     type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: DATA_FIL_VAL_DATA_AGE_DTTM
-    type: timestamp
     nullable: true
     metadata:
       description: ''
